config/networkpolicy/noobaa/noobaa-db-pg-cluster-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: noobaa-db-pg-cluster
  namespace: openshift-storage
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: noobaa-db-pg-cluster
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-storage
    ports:
    - protocol: TCP
      port: 5432
    - protocol: TCP
      port: 8000
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-monitoring
    ports:
    - protocol: TCP
      port: 9187
